resolve Java 8 compatibility problem in legacy android version and fix other major bug regarding to ser-deser of BSON because Android SDK version under 23 doesn't support (or isn't compatible to) Java 8, all the language features of Java 8 are removed (Lambda, Method reference, etc.) there was two major bugs listed below - type resolution of body in Response was misbehaving in handling types other than concrete class (List<>, Primitives...) - there was bug in invoke call proxy in HaRMIClient which causes IllegalArgumentsException
- closes #48 : remove Java 8 features
- closes #49 : fix call proxy invocation