@@ -7,22 +7,22 @@ import com.doodream.rmovjs.serde.Reader;
 import com.doodream.rmovjs.serde.Writer;
 import com.google.gson.*;
 
+import javax.xml.bind.DatatypeConverter;
 import java.io.*;
 import java.lang.reflect.Type;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
-import java.util.Base64;
 
 public class JsonConverter implements Converter {
 
     private static class ByteArrayToBase64TypeAdapter implements JsonSerializer<byte[]>, JsonDeserializer<byte[]> {
         public byte[] deserialize(JsonElement json, Type typeOfT, JsonDeserializationContext context) throws JsonParseException {
-            byte[] data = Base64.getDecoder().decode(json.getAsString());
+            byte[] data = DatatypeConverter.parseBase64Binary(json.getAsString());
             return data;
         }
 
         public JsonElement serialize(byte[] src, Type typeOfSrc, JsonSerializationContext context) {
-            return new JsonPrimitive(Base64.getEncoder().withoutPadding().encodeToString(src));
+            return new JsonPrimitive(DatatypeConverter.printBase64Binary(src));
         }
     }
 
@@ -93,7 +93,7 @@ public class JsonConverter implements Converter {
 
 
     @Override
-    public Reader reader(InputStream inputStream)  {
+    public Reader reader(final InputStream inputStream)  {
         return new Reader() {
             private BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream));
             @Override
@@ -109,8 +109,13 @@ public class JsonConverter implements Converter {
     }
 
     @Override
-    public Writer writer(OutputStream outputStream) {
-        return src -> outputStream.write(convert(src));
+    public Writer writer(final OutputStream outputStream) {
+        return new Writer() {
+            @Override
+            public void write(Object src) throws IOException {
+                outputStream.write(convert(src));
+            }
+        };
     }
 
     @Override
